[package]
name = "guinyot"
description = "A simple (two player) Guinyot, over TCP"
authors = ["Amat Gil Viñes <amatgilvinyes@gmail.com>"]
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
rand = "0.9.1"
thiserror = "2.0.12"
